--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="header-main flex">
     <div class="headings">
       <h1>Hi, I'm Laura</h1>
-      <h3>A Web Developer</h3>
+      <h3>A Software Engineer</h3>
       <a href="#contact">
         <button class="contactButton">Contact Me</button>
       </a>
@@ -97,32 +97,14 @@
           <h2>Projects</h2>
         </div>
 
-        <div class="grid desktop container photoGrid">
+        <div class="desktop container photoGrid">
           <!-- Repeat this structure for each project -->
-          <div class="project">
-            <a href="Demo/index.html">
-              <div class="project-span brown">
-                <div class="project-span-text">
-                  <h3>Swirlfeed</h3>
-                  <p>A fully functional social media website using OOP with AJAX for smooth UX.</p>
-                  <p>Languages Used: PHP, CSS3, Javascript, Jquery, HTML5</p>
-                </div>
-              </div>
-              <img src="assets/images/swirlfeed-thumbnail.PNG" class="project-img" />
-            </a>
+            <h2> Coming Soon </h2>
           </div>
           
           <!-- Add other projects the same way -->
-
         </div>
       </section>
-
-      <section id="contact" class="container contact">
-        <h2 class="sectionTitle-text">Contact Me</h2>
-        <!-- Placeholder contact form or instructions -->
-        <p>If you’d like to work together or just want to say hi, feel free to reach out to me on <a href="mailto:richardslaura24@gmail.com">richardslaura24@gmail.com</a> or connect with me on LinkedIn.</p>
-      </section>
-
     </div>
   </main>
 
