--- a/index.html
+++ b/index.html
@@ -62,18 +62,19 @@
 
         <div class="d3Graph-header">
           <div class="about-met-text">
-            <p>Hey There! I'm a web developer based in Perth with a passion to learn new languages and skills.</p>
+            <p>Hey There! I'm a gradute software engineer based in Perth with a passion to learn new languages and skills.</p>
             <p>I enjoy frontend and backend development. I like building things from scratch and understanding the theory behind each line of code.</p>
           </div>
 
           <div class="list-wrap">
-            <label class="Language-cell">Languages I Speak</label>
+            <label class="Language-cell">Languages</label>
             <ul class="lang-list">
-              <li>CSS3</li>
-              <li>SCSS</li>
+              <li>CSS3 / SCSS</li>
+              <li>React</li>
               <li>Javascript</li>
               <li>PHP</li>
               <li>Node.js</li>
+              <li>Python</li>
             </ul>
             <label class="dev-cell">Developer Tools</label>
             <ul class="dev-list">
